rabbitmq/manifests/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: system-design-rabbitmq
spec:
  selector:
    matchLabels:
      app: system-design-rabbitmq
  serviceName: 'not-applicable'
  template:
    metadata:
      labels:
        app: system-design-rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management
          ports:
            - name: http
              protocol: TCP
              containerPort: 15672
            - name: amqp
              protocol: TCP
              containerPort: 5672
          volumeMounts:
            - mountPath: '/var/lib/rabbitmq'
              name: rabbitmq-volume
      volumes:
        - name: rabbitmq-volume
          persistentVolumeClaim:
            claimName: rabbitmq-pvc
